--- a/app/index.html
+++ b/app/index.html
@@ -30,13 +30,13 @@
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
-          <a href="#" class="btn open-modal">Get in Touch</a>
+          <a href="#" class="btn open-modal">Conecte-se</a>
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning" id="our-beginning-link">Our Beginning</a></li>
-            <li><a href="#features" id="features-link">Features</a></li>
-            <li><a href="#testimonials" id="testimonials-link">Testimonials</a></li>
+            <li><a href="#our-beginning" id="our-beginning-link">Sobre</a></li>
+            <li><a href="#features" id="features-link">Serviços</a></li>
+            <li><a href="#testimonials" id="testimonials-link">Equipe</a></li>
           </ul>
         </nav>
       </div>
@@ -93,7 +93,7 @@
 
   <div id="features" class="page-section page-section--blue" data-matching-link="#features-link">
     <div class="wrapper">
-      <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
+      <h2 class="section-title"><span class="icon icon--star section-title__icon"></span><strong>Serviços</strong></h2>
 
       <div class="row row--gutters-large generic-content-container">
         
@@ -101,30 +101,25 @@
 
           <div class="feature-item">
             <span class="icon icon--rain feature-item__icon"></span>
-            <h3 class="feature-item__title">We&rsquo;ll Watch the Weather</h3>
-            <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
+            <h3 class="feature-item__title">CO Thinking</h3>
+            <p>O mundo se tornou analytics, busque a inovação atraves de novos modelos de negócios , estratégias e projetos   que unem ideação, informação e  novas tecnologias.</p>
           </div>
 
           <div class="feature-item">
             <span class="icon icon--globe feature-item__icon"></span>
-            <h3 class="feature-item__title">Global Guides</h3>
-            <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
+            <h3 class="feature-item__title">Conexão Fisica</h3>
+            <p>Faça do seu negócio um grande espaço de experiência e conecte-se com seu cliente através de ferramentas visuais, interativas e informacionais.</p>
           </div>
         </div>
 
         <div class="row__medium-6">
           <div class="feature-item">
             <span class="icon icon--wifi feature-item__icon"></span>
-            <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
-            <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
+            <h3 class="feature-item__title">Conexão online</h3>
+            <p>Unificando seu processo comunicacional e levando maior conveniência para o cliente atraves de  ferrementas digitais que impulsionam o brand awareness.</p>
           </div>
 
-          <div class="feature-item">
-            <span class="icon icon--fire feature-item__icon"></span>
-            <h3 class="feature-item__title">Survival Kit</h3>
-            <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
-          </div>
-        </div>
+            </div>
 
       </div>
     </div>
@@ -132,7 +127,7 @@
 
   <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#testimonials-link">
     <div class="wrapper wrapper--no-padding-until-large">
-      <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong>Testimonials</strong></h2>
+      <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> <strong>Equipe</strong></h2>
 
       <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
         <div class="row__large-4">
@@ -140,9 +135,9 @@
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
             </div>
-            <h3 class="testimonial__title">Jane Doe</h3>
-            <h4 class="testimonial__subtitle">9 Time Escaper</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+            <h3 class="testimonial__title">Jessica Paiva</h3>
+            <h4 class="testimonial__subtitle">Trade Marketing - Comercial</h4>
+            <p>&ldquo;Publicitária, radialista e produtora de conteúdo. Experiência em trade marketing de varejo farmacêutico e produção de eventos corporativos e institucionais.&rdquo;</p>
           </div>
         </div>
 
@@ -151,9 +146,9 @@
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
             </div>
-            <h3 class="testimonial__title">John Smith</h3>
-            <h4 class="testimonial__subtitle">4 Time Escaper</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+            <h3 class="testimonial__title">Mateus Barros</h3>
+            <h4 class="testimonial__subtitle">Projetos - Negócios</h4>
+            <p>&ldquo;Apaixonado por marketing, inovação e colaboração. Com expertise na área digital, comercial e de inovação. Experiência no varejo, agência digital e desenvolvimento de projetos com impacto.&rdquo;</p>
           </div>
         </div>
 
@@ -162,9 +157,9 @@
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
             </div>
-            <h3 class="testimonial__title">Cat McKitty</h3>
-            <h4 class="testimonial__subtitle">6 Time Escaper</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+            <h3 class="testimonial__title">Paulo Paiva</h3>
+            <h4 class="testimonial__subtitle">Negócios - Processos</h4>
+            <p>&ldquo;Consultor de Marketing, Processos e Pessoas. Gestor de projetos, motivado por crescimento e resultados.&rdquo;</p>
           </div>
         </div>
       </div>
@@ -173,15 +168,15 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2019 COcriar. Todos os direitos reservados.</span> <a href="#" class="btn btn--orange open-modal">Conecte-se</a></p>
     </div>
   </footer>
 
   <div class="modal">
     <div class="modal__inner">
-      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Get in <strong>Touch</strong></h2>
+      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Inicie sua <strong>Experiência</strong></h2>
     <div class="wrapper wrapper--narrow">
-      <p class="modal__description">We will have an online order system in place soon. Until then, connect with us on any of the platforms below!</p>
+      <p class="modal__description">Teremos um sistema de pedidos on-line pronto em breve. Até lá, conecte-se conosco em qualquer uma das plataformas abaixo!</p>
     </div>
 
     <div class="social-icons">
