Inicio concluído -Responsível

--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,10 @@
 
     <div class="large-hero__text-content">
       <div class="wrapper">
-        <h1 class="large-hero__title">Your clarity.</h1>
-        <h2 class="large-hero__subtitle">One trip away.</h2>
-        <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-        <p><a href="#" class="btn btn--orange btn--large open-modal">Get Started Today</a></p>
+        <h1 class="large-hero__title">Conexão.</h1>
+        <h2 class="large-hero__subtitle">Um clique de distância.</h2>
+        <p class="large-hero__description">Nós criamos a solução que o seu negócio precisa.</p>
+        <p><a href="#" class="btn btn--orange btn--large open-modal">Inicie sua experiência</a></p>
       </div>
     </div>
   </div>
@@ -82,9 +82,8 @@
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+            <p> A <b>COcriar</b> nasce com o propósito de acelerar negócios através dos ecossistemas criativos e colaborativos, a ideia se baseia na busca por soluções para negócios embrionários e maduros envolvendo processos digitais, físicos e estratégicos além de buscar o fomento para área de freelancer que hoje gera renda em milhares de lares em todo o país. 
+            <br>Integrando profissionais da área de comunicação, varejo, marketing, administração e outras áreas de impacto com atendimento em plataforma digital, baseia seus produtos e serviços em conexões, entendendo que relacionamento entre empresas e clientes a cada dia se tornam mais dinâmicos e disruptivos.</br></strong></p>
           </div>
         </div>
       </div>
@@ -102,7 +101,7 @@
           <div class="feature-item">
             <span class="icon icon--rain feature-item__icon"></span>
             <h3 class="feature-item__title">CO Thinking</h3>
-            <p class="feature-item__paragraph">O mundo se tornou analytics, busque a inovação atraves de novos modelos de negócios , estratégias e projetos   que unem ideação, informação e  novas tecnologias.</p>
+            <p class="feature-item__paragraph">O mundo se tornou analytics, busque a inovação através de novos modelos de negócios, estratégias e projetos que unem ideação, informação e novas tecnologias.</p>
           </div>
 
           <div class="feature-item">
@@ -153,13 +152,24 @@
         </div>
 
         <div class="row__large-4">
-          <div class="testimonial testimonial--last">
+          <div class="testimonial">
             <div class="testimonial__photo">
               <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Paulo Paiva</h3>
             <h4 class="testimonial__subtitle">Negócios - Processos</h4>
             <p>&ldquo;Consultor de Marketing, Processos e Pessoas. Gestor de projetos, motivado por crescimento e resultados.&rdquo;</p>
+          </div>
+        </div>
+
+        <div class="row__large-4">
+          <div class="testimonial testimonial--last">
+            <div class="testimonial__photo">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-kat.jpg 160w, assets/images/testimonial-kat-hi-dpi.jpg 320w" alt="Cat McKitty">
+            </div>
+            <h3 class="testimonial__title">Kamila Sampaio</h3>
+            <h4 class="testimonial__subtitle">Inteligência de Mercado</h4>
+            <p>&ldquo;Contadora em formação, com expertise na área comercial e de produto no mercado Varejista Farmacêutico.&rdquo;</p>
           </div>
         </div>
       </div>
@@ -174,15 +184,13 @@
 
   <div class="modal">
     <div class="modal__inner">
-      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Inicie sua <strong>Experiência</strong></h2>
+      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Inicie sua <strong>Experiência!</strong></h2>
     <div class="wrapper wrapper--narrow">
       <p class="modal__description">Teremos um sistema de pedidos on-line pronto em breve. Até lá, conecte-se conosco em qualquer uma das plataformas abaixo!</p>
     </div>
 
     <div class="social-icons">
-      <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+      <a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
       <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
     </div>
     </div>
