Esqueleto do formulário

--- a/app/index.html
+++ b/app/index.html
@@ -81,9 +81,8 @@
         </div>
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
-            <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-            <p> A <b>COcriar</b> nasce com o propósito de acelerar negócios através dos ecossistemas criativos e colaborativos, a ideia se baseia na busca por soluções para negócios embrionários e maduros envolvendo processos digitais, físicos e estratégicos além de buscar o fomento para área de freelancer que hoje gera renda em milhares de lares em todo o país. 
-            <br>Integrando profissionais da área de comunicação, varejo, marketing, administração e outras áreas de impacto com atendimento em plataforma digital, baseia seus produtos e serviços em conexões, entendendo que relacionamento entre empresas e clientes a cada dia se tornam mais dinâmicos e disruptivos.</br></strong></p>
+            <h2 align="right" class="headline headline--no-t-margin">Foi assim que tudo começou...</h2>
+            <p align="right"> A <b>COcriar</b> nasce com o propósito de acelerar negócios através dos ecossistemas criativos e colaborativos, a ideia se baseia na busca por soluções para negócios embrionários e maduros envolvendo processos digitais, físicos e estratégicos.</p>
           </div>
         </div>
       </div>
@@ -106,7 +105,7 @@
 
           <div class="feature-item">
             <span class="icon icon--globe feature-item__icon"></span>
-            <h3 class="feature-item__title">Conexão Fisica</h3>
+            <h3 class="feature-item__title">Conexão Física</h3>
             <p class="feature-item__paragraph">Faça do seu negócio um grande espaço de experiência e conecte-se com seu cliente através de ferramentas visuais, interativas e informacionais.</p>
           </div>
         </div>
@@ -115,7 +114,7 @@
           <div class="feature-item">
             <span class="icon icon--wifi feature-item__icon"></span>
             <h3 class="feature-item__title">Conexão online</h3>
-            <p class="feature-item__paragraph">Unificando seu processo comunicacional e levando maior conveniência para o cliente atraves de  ferrementas digitais que impulsionam o brand awareness.</p>
+            <p class="feature-item__paragraph">Unificando seu processo comunicacional e levando maior conveniência para o cliente através de ferramentas digitais que impulsionam o brand awareness.</p>
           </div>
 
             </div>
@@ -185,8 +184,32 @@
   <div class="modal">
     <div class="modal__inner">
       <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Inicie sua <strong>Experiência!</strong></h2>
-    <div class="wrapper wrapper--narrow">
-      <p class="modal__description">Teremos um sistema de pedidos on-line pronto em breve. Até lá, conecte-se conosco em qualquer uma das plataformas abaixo!</p>
+
+    <div class="form">  
+      <form id="contact" action="" method="post">
+        <h4>Contate-nos hoje, e receba uma resposta em 24 horas!</h4>
+        <fieldset>
+          <input placeholder="Nome" type="text" tabindex="1" required autofocus>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Telefone" type="text" tabindex="2" required>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Empresa" type="text" tabindex="3" required>
+        </fieldset>
+         <fieldset>
+          <input placeholder="Cargo" type="text" tabindex="4" required>
+        </fieldset>
+        <fieldset>
+          <input placeholder="Site com http://" type="text" tabindex="5" required>
+        </fieldset>
+        <fieldset>
+          <textarea placeholder="Digite sua mensagem aqui...." type="text" tabindex="6" required></textarea>
+        </fieldset>
+        <fieldset>
+          <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Enviar</button>
+        </fieldset>
+      </form> 
     </div>
 
     <div class="social-icons">
