--- a/app/index.html
+++ b/app/index.html
@@ -185,26 +185,32 @@
     <div class="modal__inner">
       <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> Inicie sua <strong>Experiência!</strong></h2>
 
+    <?php include('form_process.php'); ?>
+
     <div class="form">  
-      <form id="contact" action="" method="post">
+      <form id="contact" action="<?= $_SERVER['PHP_SELF']; ?>" method="post">
         <h4>Contate-nos hoje, e receba uma resposta em 24 horas!</h4>
         <fieldset>
-          <input placeholder="Nome" type="text" tabindex="1" required autofocus>
+          <input placeholder="Nome" type="text" name="name"  tabindex="1" required autofocus>
+          <span class="error"><?= $name_error ?></span>
         </fieldset>
         <fieldset>
-          <input placeholder="Telefone" type="text" tabindex="2" required>
+          <input placeholder="Telefone" type="text"  name="phone"tabindex="2" required>
+          <span class="error"><?= $phone_error ?></span>
         </fieldset>
         <fieldset>
-          <input placeholder="Empresa" type="text" tabindex="3" required>
+          <input placeholder="Empresa" type="text"  name="email" tabindex="3" required>
+          <span class="error"><?= $email_error ?></span>
         </fieldset>
          <fieldset>
           <input placeholder="Cargo" type="text" tabindex="4" required>
         </fieldset>
         <fieldset>
-          <input placeholder="Site com http://" type="text" tabindex="5" required>
+          <input placeholder="Site com http://" type="text" name="url" tabindex="5" >
+          <span class="error"><?= $url_error ?></span>
         </fieldset>
         <fieldset>
-          <textarea placeholder="Digite sua mensagem aqui...." type="text" tabindex="6" required></textarea>
+          <textarea placeholder="Digite sua mensagem aqui...." type="text" name="message" tabindex="6" required></textarea>
         </fieldset>
         <fieldset>
           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Enviar</button>
