--- a/app/index.html
+++ b/app/index.html
@@ -172,9 +172,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
-      <p><span class="site-footer__text">Copyright &copy; 2019 COcriar. Todos os direitos reservados.</span> <a href="#" class="btn btn--orange open-modal">Conecte-se</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2019 COcriar. Todos os direitos reservados.</span><a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a> <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a><a href="#" class="btn btn--orange open-modal">Conecte-se</a></p>
          <div class="social-icons">
 
     </div>
