--- a/app/index.html
+++ b/app/index.html
@@ -81,9 +81,34 @@
           </div>
         </div>
       </div>
+      <div class="row_medium-8 row_medium-8--smaller">
+        <div class="generic-content-container">
+          <div class="circle">
+            <div class="normal-div" id="div-1">
+              <h2 align="center" class="headline headline--no-t-margin">Missão</h2>
+              <p align="center">
+                Usar a criatividade e colaboração para desenvolver grandes negócios.
+              </p>
+            </div>
+
+             <div class="normal-div" id="div-2">
+              <h2 align="center" class="headline headline--no-t-margin">Visão</h2>
+              <p align="center">
+                Ser referência em negócios inovadores e impactantes utilizando ferramentas de criatividade e conexão.
+              </p>
+            </div>
+
+             <div class="normal-div" id="div-3">
+              <h2 align="center" class="headline headline--no-t-margin">Valores</h2>
+              <p align="center">
+                Ecossistema baseado em inovação, sustentabilidade conexões com propósito.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
   <div id="features" class="page-section page-section--blue" data-matching-link="#features-link">
     <div class="wrapper">
       <h2 class="section-title"><span class="icon icon--star section-title__icon"></span><strong>Serviços</strong></h2>
