Mudança no e-mail do formulário

--- a/app/index.html
+++ b/app/index.html
@@ -211,7 +211,7 @@
 
     <div class="form">
       <div id="form-div">  
-       <form action="https://formspree.io/arthurbene@hotmail.com" method="POST">
+       <form action="https://formspree.io/cocriar.contato@gmail.com" method="POST">
           <label class="teste" for=nome""/label>
           <input name="nome" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Nome" id="nome"/>
           
