Fotos atualizadas, alterações no rodapé e no large-hero

--- a/app/index.html
+++ b/app/index.html
@@ -101,7 +101,7 @@
              <div class="normal-div" id="div-3">
               <h2 align="center" class="headline headline--no-t-margin">Valores</h2>
               <p align="center">
-                Ecossistema baseado em inovação, sustentabilidade conexões com propósito.
+                Ecossistema baseado em inovação, sustentabilidade e conexões com propósito.
               </p>
             </div>
           </div>
@@ -120,7 +120,7 @@
           <div class="feature-item">
             <span class="icon icon--rain feature-item__icon"></span>
             <h3 class="feature-item__title">CO Thinking</h3>
-            <p class="feature-item__paragraph">O mundo se tornou analytics, busque a inovação através de novos modelos de negócios, estratégias e projetos que unem ideação, informação e novas tecnologias.</p>
+            <p class="feature-item__paragraph">O mundo tornou-se <i>analytics</i>. Busque a inovação através de novos modelos de negócios, estratégias e projetos que unem ideação, informação e novas tecnologias.</p>
           </div>
 
           <div class="feature-item">
@@ -134,7 +134,7 @@
           <div class="feature-item">
             <span class="icon icon--wifi feature-item__icon"></span>
             <h3 class="feature-item__title">Conexão online</h3>
-            <p class="feature-item__paragraph">Unificando seu processo comunicacional e levando maior conveniência para o cliente através de ferramentas digitais que impulsionam o brand awareness.</p>
+            <p class="feature-item__paragraph">Unificando seu processo comunicacional e levando maior conveniência para o cliente através de ferramentas digitais que impulsionam o <i>brand awareness</i>.</p>
           </div>
 
             </div>
@@ -151,29 +151,29 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpeg 160w, assets/images/testimonial-jane-hi-dpi.jpeg 320w" alt="Jane Doe">
             </div>
             <h3 class="testimonial__title">Jessica Paiva</h3>
             <h4 class="testimonial__subtitle">Trade Marketing - Comercial</h4>
-            <p>&ldquo;Publicitária, radialista e produtora de conteúdo. Experiência em trade marketing de varejo farmacêutico e produção de eventos corporativos e institucionais.&rdquo;</p>
+            <p>&ldquo;Publicitária, radialista e produtora de conteúdo. Experiência em <i>trade marketing</i> de varejo farmacêutico e produção de eventos corporativos e institucionais.&rdquo;</p>
           </div>
         </div>
 
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpeg 160w, assets/images/testimonial-john-hi-dpi.jpeg 320w" alt="John Smith">
             </div>
             <h3 class="testimonial__title">Mateus Barros</h3>
             <h4 class="testimonial__subtitle">Projetos - Negócios</h4>
-            <p>&ldquo;Apaixonado por marketing, inovação e colaboração. Com expertise na área digital, comercial e de inovação. Experiência no varejo, agência digital e desenvolvimento de projetos com impacto.&rdquo;</p>
+            <p>&ldquo;Apaixonado por <i>marketing</i>, inovação e colaboração. Com expertise na área digital, comercial e de inovação. Experiência no varejo, agência digital e desenvolvimento de projetos com impacto.&rdquo;</p>
           </div>
         </div>
 
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpeg 160w, assets/images/testimonial-cat-hi-dpi.jpeg 320w" alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Paulo Paiva</h3>
             <h4 class="testimonial__subtitle">Negócios - Processos</h4>
@@ -188,7 +188,7 @@
             </div>
             <h3 class="testimonial__title">Kamila Sampaio</h3>
             <h4 class="testimonial__subtitle">Inteligência de Mercado</h4>
-            <p>&ldquo;Contadora em formação, com expertise na área comercial e de produto no mercado Varejista Farmacêutico.&rdquo;</p>
+            <p>&ldquo;Contadora em formação, com expertise na área comercial e de produto, no mercado Varejista Farmacêutico.&rdquo;</p>
           </div>
         </div>
       </div>
@@ -197,7 +197,11 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2019 COcriar. Todos os direitos reservados.</span><a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a> <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a><a href="#" class="btn btn--orange open-modal">Conecte-se</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2019 COcriar. Todos os direitos reservados.</span>
+         <span class="site-footer__text">cocriar.contato@gmail.com</span>
+         <span class="site-footer__text">+55 85 9760-5670</span>
+         <span class="site-footer__text">+55 85 9789-4359</span>
+         <a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a> <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
          <div class="social-icons">
 
     </div>
