Alterações nas imagens

--- a/app/index.html
+++ b/app/index.html
@@ -136,8 +136,7 @@
             <h3 class="feature-item__title">Conexão online</h3>
             <p class="feature-item__paragraph">Unificando seu processo comunicacional e levando maior conveniência para o cliente através de ferramentas digitais que impulsionam o <i>brand awareness</i>.</p>
           </div>
-
-            </div>
+        </div>
 
       </div>
     </div>
@@ -151,7 +150,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpeg 160w, assets/images/testimonial-jane-hi-dpi.jpeg 320w" alt="Jane Doe">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpeg 160w, assets/images/testimonial-jane-hi-dpi.jpeg 320w" alt="Jessica Paiva Perfil">
             </div>
             <h3 class="testimonial__title">Jessica Paiva</h3>
             <h4 class="testimonial__subtitle">Trade Marketing - Comercial</h4>
@@ -162,7 +161,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpeg 160w, assets/images/testimonial-john-hi-dpi.jpeg 320w" alt="John Smith">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpeg 160w, assets/images/testimonial-john-hi-dpi.jpeg 320w" alt="Mateus Barros Perfil">
             </div>
             <h3 class="testimonial__title">Mateus Barros</h3>
             <h4 class="testimonial__subtitle">Projetos - Negócios</h4>
@@ -173,7 +172,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpeg 160w, assets/images/testimonial-cat-hi-dpi.jpeg 320w" alt="Cat McKitty">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpeg 160w, assets/images/testimonial-cat-hi-dpi.jpeg 320w" alt="Paulo Paiva Perfil">
             </div>
             <h3 class="testimonial__title">Paulo Paiva</h3>
             <h4 class="testimonial__subtitle">Negócios - Processos</h4>
@@ -184,7 +183,7 @@
         <div class="row__large-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-kat.jpg 160w, assets/images/testimonial-kat-hi-dpi.jpg 320w" alt="Cat McKitty">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-kat.jpg 160w, assets/images/testimonial-kat-hi-dpi.jpg 320w" alt="Kamila Sampaio Perfil">
             </div>
             <h3 class="testimonial__title">Kamila Sampaio</h3>
             <h4 class="testimonial__subtitle">Inteligência de Mercado</h4>
