--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you.">
 
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+
   <!-- build:css assets/styles/styles.css -->
   <link rel="stylesheet" href="temp/styles/styles.css">
   <!-- endbuild -->
@@ -16,8 +18,9 @@
   <script src="/temp/scripts/Vendor.js"></script>
   <!-- endbuild -->
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+  <!-- build:js main.js -->
   <script src="./main.js"></script>
+  <!-- endbuild -->
 </head>
 <body>
   <header class="site-header">
@@ -200,7 +203,8 @@
          <span class="site-footer__text">cocriar.contato@gmail.com</span>
          <span class="site-footer__text">+55 85 9760-5670</span>
          <span class="site-footer__text">+55 85 9789-4359</span>
-         <a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a> <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+         <a href="https://www.instagram.com/cocriar.go/" target="_blank" class="social-icons__icon"><span class="icon icon--instagram"></span></a> 
+         <a href="https://www.linkedin.com/company/cocriar-go/about/" target="_blank" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
          <div class="social-icons">
 
     </div>
