Alterações na tipologia, imagens de perfil, imagem principal e rodapé

--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:300' rel='stylesheet' type='text/css'>
   <title>COcriar</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
-  <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <meta name="description" content="Conexão. Um clique de distância. Nós criamos a solução que o seu negócio precisa.">
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 
@@ -59,9 +59,9 @@
 
     <div class="large-hero__text-content">
       <div class="wrapper">
-        <h1 class="large-hero__title">Conexão.</h1>
-        <h2 class="large-hero__subtitle">Um clique de distância.</h2>
-        <p class="large-hero__description">Nós criamos a solução que o seu negócio precisa.</p>
+        <h1 class="large-hero__title">CONEXÃO</h1>
+        <h2 class="large-hero__subtitle">UM CLIQUE DE DISTÂNCIA</h2>
+        <p class="large-hero__description">Nós criamos a solução que o seu negócio precisa</p>
         <p><a href="#" class="btn btn--orange btn--large open-modal">Inicie sua experiência</a></p>
       </div>
     </div>
@@ -153,7 +153,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpeg 160w, assets/images/testimonial-jane-hi-dpi.jpeg 320w" alt="Jessica Paiva Perfil">
+              <img class="lazyload" sizes="256px" data-srcset="assets/images/testimonial-jane.png 256w, assets/images/testimonial-jane-hi-dpi.png 256w" alt="Jessica Paiva Perfil">
             </div>
             <h3 class="testimonial__title">Jessica Paiva</h3>
             <h4 class="testimonial__subtitle">Trade Marketing - Comercial</h4>
@@ -164,7 +164,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpeg 160w, assets/images/testimonial-john-hi-dpi.jpeg 320w" alt="Mateus Barros Perfil">
+              <img class="lazyload" sizes="256px" data-srcset="assets/images/testimonial-john.png 256w, assets/images/testimonial-john-hi-dpi.png 256w" alt="Mateus Barros Perfil">
             </div>
             <h3 class="testimonial__title">Mateus Barros</h3>
             <h4 class="testimonial__subtitle">Projetos - Negócios</h4>
@@ -175,7 +175,7 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpeg 160w, assets/images/testimonial-cat-hi-dpi.jpeg 320w" alt="Paulo Paiva Perfil">
+              <img class="lazyload" sizes="256px" data-srcset="assets/images/testimonial-cat.png 256w, assets/images/testimonial-cat-hi-dpi.png 256w" alt="Paulo Paiva Perfil">
             </div>
             <h3 class="testimonial__title">Paulo Paiva</h3>
             <h4 class="testimonial__subtitle">Negócios - Processos</h4>
@@ -186,7 +186,7 @@
         <div class="row__large-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-kat.jpg 160w, assets/images/testimonial-kat-hi-dpi.jpg 320w" alt="Kamila Sampaio Perfil">
+              <img class="lazyload" sizes="256px" data-srcset="assets/images/testimonial-kat.png 256w, assets/images/testimonial-kat-hi-dpi.png 256w" alt="Kamila Sampaio Perfil">
             </div>
             <h3 class="testimonial__title">Kamila Sampaio</h3>
             <h4 class="testimonial__subtitle">Inteligência de Mercado</h4>
